# cuda_dip_modeller

./: pyproject.toml  requirements.txt  setup.cfg  test.py
src/cuda_dip_modeller/: cuda_dip_modeller.cu  cuda_dip_modeller.py
