[metadata]
name = cuda_dip_modeller
version = 0.1
description = CUDA elliptical occultation modeller
author = Leigh C. Smith, Sergey E. Koposov
license = GNU GPLv3
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Astronomy

[options]
install_requires =
    numpy>=1.15
    pycuda>=2022.1
    scipy>=1.7
python_requires = >=3.8
packages = find:
package_dir =
    = src
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
mypkg =
    *.cu
